# voice-doc-intelligence

./: .env.example  .gitignore  FRONTEND_SUMMARY.md  INSTALLATION_CHECKLIST.md  LOGGING.md  QUICKSTART.md  README.md  START_VOICE.md  VOICE_INTEGRATION_SUMMARY.md  VOICE_TESTING_GUIDE.md  dependancy.txt  fileStructure.txt  fix_qdrant_3072.sh  fix_qdrant_dimensions.sh  package.json  pnpm-lock.yaml  project-structure.txt  pyproject.toml  requirements.txt
apps/api/: main.py  main_updated.py
apps/api/core/: config.py  connections.py  database.py  modern_database.py
apps/api/models/: document.py
apps/api/routers/: rtc.py  voice.py
apps/api/services/agents/: README.md  __init__.py  agent_coordinator.py  analytics_agent.py  base_agent.py  context_agent.py  crew_setup.py  document_agent.py  query_agent.py  voice_agent.py
apps/api/services/communication/: unified_rtc_service.py
apps/api/services/document/: __init__.py  contextual_processor.py  embeddings.py  processor.py  vector_store.py
apps/api/services/rag/: llamaindex_service.py
apps/api/services/storage/: local_storage.py
apps/api/services/voice/: __init__.py  enhanced_livekit_service.py  enhanced_voice_service.py  livekit_service.py  modern_voice_service.py
apps/web/: README.md  SETUP.md  astro.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.mjs  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/components/analytics/: AnalyticsDashboard.tsx
apps/web/components/chat/: ChatInterface.tsx
apps/web/components/documents/: DocumentList.tsx  DocumentUpload.tsx
apps/web/components/voice/: VoiceInterface.tsx
apps/web/lib/: api-client.ts  utils.ts
apps/web/src/components/: DocumentList.tsx  DocumentUpload.tsx  VoiceInterface.tsx
apps/web/src/layouts/: Layout.astro
apps/web/src/pages/: index.astro
apps/web/src/styles/: global.css
apps/web/types/: index.ts
apps/workers/: enhanced_voice_agent_worker.py  modern_voice_worker.py  voice_agent_worker.py
data/uploads/uploads/038fa529-840f-4fc3-a6fc-d0d0e0b4bc7a/: POC Implementation Plan - Agentic Architecture.pdf.metadata.json
infrastructure/local/: docker-compose-minimal.yml  docker-compose.yml  init-db.sql  livekit.yaml
infrastructure/monitoring/: voice_metrics_dashboard.json
infrastructure/pulumi/: __main__.py
scripts/: dev.sh  setup.sh  start-day1-2.sh  start-docker.sh  test_day1_2.py  view_logs.py
